--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.54.1"
+    "@typescript-eslint/eslint-plugin": "^5.54.1",
+    "eslint-config-prettier": "^8.7.0",
+    "prettier": "^2.8.4"
   }
 }
