--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "cd .. && husky install frontend/.husky"
   },
   "dependencies": {
     "@types/node": "18.14.6",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "eslint-config-prettier": "^8.7.0",
+    "husky": "^8.0.3",
     "prettier": "^2.8.4"
   }
 }
