--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@graphprotocol/client-cli": "^2.2.20",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "eslint-config-prettier": "^8.7.0",
     "husky": "^8.0.3",
