--- a/frontend/.graphclientrc.yml
+++ b/frontend/.graphclientrc.yml
@@ -3,3 +3,6 @@ sources:
     handler:
       graphql:
         endpoint: https://api.studio.thegraph.com/query/43355/ens-explorer/0.0.1
+
+documents:
+  - ./queries/ens-names-registered.graphql
