--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,13 +16,16 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "graphql": "^16.6.0",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "urql": "^3.0.4"
   },
   "devDependencies": {
     "@graphprotocol/client-cli": "^2.2.20",
+    "@graphprotocol/client-urql": "^1.0.16",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "eslint-config-prettier": "^8.7.0",
     "husky": "^8.0.3",
