--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "build-graphclient": "graphclient build"
   },
   "dependencies": {
+    "@graphql-mesh/utils": "^0.43.15",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
