--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
     "build-graphclient": "graphclient build"
   },
   "dependencies": {
+    "@graphql-mesh/graphql": "^0.34.8",
     "@graphql-mesh/utils": "^0.43.15",
+    "@graphql-tools/merge": "^8.4.0",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -25,8 +27,8 @@
     "urql": "^3.0.4"
   },
   "devDependencies": {
-    "@graphprotocol/client-cli": "^2.2.20",
-    "@graphprotocol/client-urql": "^1.0.16",
+    "@graphprotocol/client-cli": "^2.2.16",
+    "@graphprotocol/client-urql": "^1.0.13",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "eslint-config-prettier": "^8.7.0",
     "husky": "^8.0.3",
