add: tailwind setup

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,9 +30,11 @@
     "@graphprotocol/client-cli": "^2.2.16",
     "@graphprotocol/client-urql": "^1.0.13",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
+    "autoprefixer": "^10.4.14",
     "eslint-config-prettier": "^8.7.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.2",
+    "postcss": "^8.4.21",
     "prettier": "^2.8.4",
     "tailwindcss": "^3.2.7"
   }
