--- a/explorer-subgraph/subgraph.yaml
+++ b/explorer-subgraph/subgraph.yaml
@@ -14,21 +14,12 @@ dataSources:
       apiVersion: 0.0.7
       language: wasm/assemblyscript
       entities:
-        - Approval
-        - ApprovalForAll
-        - TokenMetadataURIUpdated
-        - TokenURIUpdated
-        - Transfer
+        - Token
+        - User
       abis:
         - name: Token
           file: ./abis/Token.json
       eventHandlers:
-        - event: Approval(indexed address,indexed address,indexed uint256)
-          handler: handleApproval
-        - event: ApprovalForAll(indexed address,indexed address,bool)
-          handler: handleApprovalForAll
-        - event: TokenMetadataURIUpdated(indexed uint256,address,string)
-          handler: handleTokenMetadataURIUpdated
         - event: TokenURIUpdated(indexed uint256,address,string)
           handler: handleTokenURIUpdated
         - event: Transfer(indexed address,indexed address,indexed uint256)
